<resources xmlns:tools="http://schemas.android.com/tools">
<string name="location_enable">
    Please turn on location services and ensure high accuracy is enabled.
</string>
    <string name="change_network">
    Make sure location services are set to high accuracy.
</string>
    <string name="c_tryagain">Try again</string>
    <string name="back">Back</string>
    <string name="nodata">No data available</string>
    <string name="check_net_connection">Please check your internet connection</string>
    <string name="location_disable">Location services are disabled</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="please_check_internet">Internet connection required</string>
    <string name="phone">Mobile number</string>
    <string name="password">Password</string>
    <string name="forgotpswd">Forgot password?</string>
    <string name="done">Done</string>
    <string name="signin">Sign in</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="check_internet">Please accept a new ride</string>
    <string name="t_ok">OK</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_the_password">Enter your password</string>
    <string name="pwd_min">Password must be at least 6 characters</string>
    <string name="confirmlogout">Do you want to log out?</string>
    <string name="confirm_complete">Do you want to complete this trip?</string>
    <string name="m_me">Profile</string>
    <string name="total">Total</string>
    <string name="excuse_me_brevity">Sign up using the referral code</string>
    <string name="and_earn">and earn rewards</string>
    <string name="download_from">Download the app from:</string>
    <string name="profile_image">Profile image</string>
    <string name="choose_an_image">Select an image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancelled">Cancelled</string>
    <string name="m_logout">Log out</string>
    <string name="submit">Submit</string>
    <string name="pwd_same">Password and confirmation do not match</string>
    <string name="cancell">Cancel</string>
    <string name="image_failed">Please select an image from a valid gallery path</string>
    <string name="first">First name</string>
    <string name="last">Last name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="confimpswd">Confirm password</string>
    <string name="bankstmt">Bank account is used for commission payout</string>
    <string name="bankcomm"><nowiki>*</nowiki></string>
    <string name="no_changes">No changes detected</string>
    <string name="my_status">My location</string>
    <string name="you_are_here">You are here</string>
    <string name="current_location">Current location</string>
    <string name="trip_history">Trip history</string>
    <string name="trip_details">Trip details</string>
    <string name="past_booking">Past bookings</string>
    <string name="name">Name</string>
    <string name="accept_time">30 seconds left to accept</string>
    <string name="min">Min</string>
    <string name="sec">Sec</string>
    <string name="minutestxt">Minute</string>
    <string name="mins">mins</string>
    <string name="secondstxt">Seconds</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="Trip_Request">Trip request</string>
    <string name="seconds_to_left">Time left to accept</string>
    <string name="device_not_support_map">Map service is not supported on this device</string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="stop_waiting">Stop waiting</string>
    <string name="start_waiting">Start waiting</string>
    <string name="heading_ongoing">Waiting for passenger</string>
    <string name="pass_onboard">Start trip</string>
    <string name="ongoing_journey">Trip in progress</string>
    <string name="waiting_time_txt">Waiting time</string>
    <string name="arvd_destination">End trip</string>
    <string name="ive_arrived">Arrived</string>
    <string name="pickup_passenger">Pick up passenger</string>
    <string name="you_are_in_trip">You already have an active trip</string>
    <string name="pickuploc">Pick-up location</string>
    <string name="currentloc">Current location</string>
    <string name="droploc">Drop location</string>
    <string name="picklocation">Pick-up location</string>
    <string name="notes">Landmark</string>
    <string name="you">You</string>
    <string name="waiting_time">Waiting time cost (per min)</string>
    <string name="total_km">Total km</string>
    <string name="per">per</string>
    <string name="actual_distance">Total distance</string>
    <string name="waiting_cost">Waiting time cost</string>
    <string name="Tax">Tax</string>
    <string name="tax">Tax (</string>
    <string name="tax_percent">%)</string>
    <string name="total_amount">Total</string>
    <string name="paymentby">Payment by</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="uncard">New card</string>
    <string name="fare_calculator">Fare calculator</string>
    <string name="wallet_amount">Wallet amount used</string>
    <string name="pay_amount">Amount to pay</string>
    <string name="trip_completed">Trip completed</string>
    <string name="trip_id">Trip ID</string>
    <string name="p_congrats">Payment completed</string>
    <string name="p_main">Back to home</string>
    <string name="p_cardno">Card number **** **** **** ****</string>
    <string name="p_expiry">Expiry (MM/YY)</string>
    <string name="p_cvv">CVV</string>
    <string name="invite_sms">SMS</string>
    <string name="invite_email">Email</string>
    <string name="invite_fb">Facebook</string>
    <string name="invite_whatsapp">WhatsApp</string>
    <string name="invite_twitter">Twitter</string>
    <string name="invite_sharevia">Share via</string>
    <string name="invite_frdrides">When a driver completes a trip using your code</string>
    <string name="invite_youearn">You earn</string>
    <string name="invite_friend">Invite friends</string>
    <string name="sendmail">Send mail</string>
    <string name="there_is_no_email_client_installed">No email client is installed</string>
    <string name="add">Add</string>
    <string name="amount">Amount</string>
    <string name="payment">Payment</string>
    <string name="t_passname">Passenger name</string>
    <string name="t_pickloc">Pick-up location</string>
    <string name="t_picktime">Pick-up time</string>
    <string name="t_droploc">Drop location</string>
    <string name="t_droptime">Drop time</string>
    <string name="t_distance">Distance travelled</string>
    <string name="t_tripduration">Trip duration</string>
    <string name="heading_payuncard">Pay using a new card</string>
    <string name="ent_ccard_no">Enter your credit card number</string>
    <string name="ent_chk_ccard">Please check your credit card number</string>
    <string name="ent_exp_date">Enter expiry date</string>
    <string name="ent_exp_year_gt">Expiry year should be the current year or later</string>
    <string name="ent_cvv">Enter your CVV number</string>
    <string name="ent_chk_cvv">Please check your CVV number</string>
    <string name="message">Message</string>
    <string name="ok">OK</string>
    <string name="select_language">Select language</string>
    <string name="discount">Discount</string>
    <string name="trip_fare">Trip fare</string>
    <string name="enter_the_first_name">Enter your first name</string>
    <string name="enter_the_last_name">Enter your last name</string>
    <string name="enter_the_card_number">Enter your card number</string>
    <string name="enter_the_valid_card_number">Enter a valid card number</string>
    <string name="enter_the_expiry_date">Enter your expiry date</string>
    <string name="enter_the_email">Enter your email</string>
    <string name="enter_the_valid_email">Enter a valid email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_in_going_trip">Are you sure you want to cancel this trip?</string>
    <string name="please_click_back_again_exit">Press back again to exit</string>
    <string name="upload_your_image">Upload your file</string>
    <string name="file_upload">Upload files?</string>
    <string name="choose">Choose file</string>
    <string name="please_choose">Please choose a file</string>
    <string name="please_choosedate">Please select the correct date</string>
    <string name="call_passeneger">Call</string>
    <string name="taxi_details">Taxi details</string>
    <string name="taxi_model">Taxi model</string>
    <string name="taxi_number">Taxi number</string>
    <string name="taxi_assignfrom">Taxi from date</string>
    <string name="taxi_assignto">Taxi to date</string>
    <string name="help">Help</string>
    <string name="s_signin">Log in</string>
    <string name="s_pass_max">Password must be less than 32 characters</string>
    <string name="remarks">Remarks</string>
    <string name="r_fare">Fare</string>
    <string name="l_fromdate">From date</string>
    <string name="l_todate">To date</string>
    <string name="f_timetoreach">Time to reach</string>
    <string name="f_forgotpwd">Forgot password</string>
    <string name="reg_success">Your registration has been completed successfully</string>
    <string name="reg_msg">Visit the nearest service center for vehicle inspection</string>
    <string name="reg_msg1">or visit</string>
    <string name="reg_msg2">www.seero.net</string>
    <string name="c_oldpwd">Old password</string>
    <string name="c_newpwd">New password</string>
    <string name="c_conpwd">Confirm password</string>
    <string name="c_chnpwd">Change password</string>
    <string name="m_timer">00:00:00</string>
    <string name="referral">Referral</string>
    <string name="trip">Trip</string>
    <string name="trips1">Trips</string>
    <string name="Lasttrip">Last trip</string>
    <string name="Last2trip">Last 2 trips</string>
    <string name="Last3trip">Last 3 trips</string>
    <string name="waitingpassenger">Waiting for passenger</string>
    <string name="tripprogress">Trip in progress</string>
    <string name="tripdetails">Trip details</string>
    <string name="zero">0</string>
    <string name="Colon">:</string>
    <string name="seconds">00</string>
    <string name="farecal">Fare</string>
    <string name="string_tips">Tips</string>
    <string name="round_trip">Round Trip</string>
    <string name="f_km">km</string>
    <string name="f_float">0.0</string>
    <string name="f_currsymbol">$</string>
    <string name="enter_the_old_password">Please enter your old password</string>
    <string name="enter_the_new_password">Please enter your new password</string>
    <string name="enter_the_confirmation_password">Please enter your confirmation password</string>
    <string name="password_min_character">Password must be at least 6 characters</string>
    <string name="confirmation_password_mismatch_with_password">Password and confirm password do not match</string>
    <string name="old_password_and_newpassword_are_same">Old and new passwords cannot be the same</string>
    <string name="version_up_message">A new version of the driver app is available. This version is no longer supported.</string>
    <string name="del_acc">Delete your account</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="send_emergency_alert">Are you sure you want to send an emergency alert?</string>
    <string name="tap_map">Tap the map to change the route if needed</string>
    <string name="reset">Reset</string>
    <string name="direction">Direction</string>
    <string name="mobileno">Mobile Number\n</string>
</resources>