<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@drawable/reason_bg"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:srcCompat="@drawable/ic_warning"
            android:padding="@dimen/dp_10"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/send_emergency_alert" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.2dp"
            android:layout_marginTop="15dp"
            android:background="@color/pure_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_failure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/clr_transparent"
                android:text="@string/no"
                android:textColor="@color/btn_accept_primary"
                android:visibility="visible" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/txt_light_gray"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_success"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/clr_transparent"
                android:text="@string/yes"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>